--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,8 @@ jobs:
             ssh -o StrictHostKeyChecking=no ec2-user@13.201.20.162 \<< EOF
               cd /home/ec2-user/arya-demo   # Update path if different
               git pull origin main
-              docker-compose down
+              docker-compose down --remove-orphans
+              docker rm -f arya_pulses || true
               docker-compose build
               docker-compose up -d
             EOF
