--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,17 +20,31 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "SHA256:asOG2RzLEMrW/aakiDr/z4qUm0OQ/FCxXBLd8paFyls"  # Replace with actual fingerprint
+            - "SHA256:asOG2RzLEMrW/aakiDr/z4qUm0OQ/FCxXBLd8paFyls"  # Replace with your actual fingerprint
       - run:
           name: Deploy with Docker
           command: |
-            ssh -o StrictHostKeyChecking=no ec2-user@13.201.20.162 \<< EOF
-              cd /home/ec2-user/arya-demo   # Update path if different
+            ssh -o StrictHostKeyChecking=no ec2-user@13.201.20.162 << 'EOF'
+              set -e  # Exit on error
+
+              cd /home/ec2-user/arya-demo || git clone https://github.com/lokesh-2809/arya-demo.git && cd arya-demo
+
+              echo "📥 Pulling latest code..."
               git pull origin main
+
+              echo "🧹 Stopping and removing existing container if exists..."
+              docker stop arya_pulses || true
+              docker rm arya_pulses || true
+
+              echo "🧼 Cleaning up network (optional)..."
+              docker network rm arya-demo_default || true
+
+              echo "🛠️ Rebuilding and restarting containers..."
               docker-compose down --remove-orphans
-              docker rm -f arya_pulses || true
               docker-compose build
               docker-compose up -d
+
+              echo "✅ Deployment finished successfully"
             EOF
 
 workflows:
