--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: Deploy with Docker
           command: |
-            ssh -o StrictHostKeyChecking=no ec2-user@13.201.20.162 << 'EOF'
+            ssh -o StrictHostKeyChecking=no ec2-user@13.201.20.162 \<< 'EOF'
               set -e  # Exit on error
 
               cd /home/ec2-user/arya-demo || git clone https://github.com/lokesh-2809/arya-demo.git && cd arya-demo
