--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
 
               echo "🧹 Stopping and removing existing container if exists..."
               docker stop arya_pulses || true
-              docker rm -f arya_pulses || true
+              docker ps -aq --filter "name=arya_pulses" | xargs -r docker rm -f
 
               echo "🧼 Cleaning up Docker network (optional)..."
               docker network rm arya-demo_default || true
